README.md changes

--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,7 +5,7 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_BrayanBouk
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I have a proven track record of success in developing and maintaining enterprise applications for healthcare and financial businesses, encompassing large and small enterprises. My experience includes proficient coding, debugging, testing, and troubleshooting of software applications, with comprehensive knowledge of the Software Development Life Cycle (SDLC). I am well-versed in Agile methodologies, utilizing Scrum and test-driven development (TDD) and the Waterfall model. I have consistently delivered high-quality solutions that meet and exceed client expectations, fostering solid relationships built on trust and reliability.
+summary: I have a demonstrated history of accomplishments in full-stack development, employing Java Spring for the backend and JavaScript React for the front end, specifically in enterprise applications for healthcare and financial sectors, catering to both sizable corporations and smaller enterprises. My expertise encompasses skillful coding, rigorous debugging, thorough testing, and effective troubleshooting of software applications while maintaining a comprehensive understanding of the Software Development Life Cycle (SDLC). I possess adept knowledge of Agile methodologies, applying Scrum and test-driven development (TDD). Throughout my career, I have consistently delivered top-notch solutions that meet and surpass client expectations, fostering enduring relationships founded on trust and dependability.
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -17,6 +17,7 @@ skills:
     - RDBMS/SQL
     - Agile/Scrum
     - Git
+    - Docker
   # At least 5 skills
   competent:
     - Spring Boot
@@ -41,10 +42,7 @@ jarvis_projects:
     description: I developed a system to document and store hardware specs and resource usage for a Linux cluster in PostgreSQL. I created an MVP for Jarvis Linux Cluster Administration, including scripts to gather hardware data, track server usage, and launch PostgreSQL and its docker container. This resulted in a successful functional MVP for the Jarvis Linux Cluster Administration.
   - name: "Core Java Apps"
     git_url: "/core_java"
-    description:
-      - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+    description: ""
   - name: "Springboot App"
     git_url: "/springboot"
     description: ""
@@ -65,14 +63,14 @@ jarvis_projects:
 # Feel free to add more projects
 highlighted_projects:
     #project name
-  - name: "Web app for resturant"
+  - name: "Image Processing Library"
     #URL is optional
-    git_url: "https://github.com/jarviscanada/jarvis_profile_builder"
+    git_url: "https://github.com/bbrayan/Image_Processing_Library"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
-  - name: "Machine Learning"
-    git_url:
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
+    description:  I've developed an image processing library with a versatile toolkit, including 3x3 filter applications like edge detection, black pixel counting in connected regions, and extracting these regions as separate images. It also provides convenient image scaling options, whether for a single image or its corresponding areas, along with basic number recognition capabilities using Euclidean distance and feature vectors, making it a comprehensive solution for various image processing tasks.
+  - name: "Real Time Chat Room"
+    git_url: "https://github.com/bbrayan/Sand_Castle"
+    description: Sand Castle is a simple real-time chat room and a collaborative whiteboard. I made it with React, Node.js, and Socket.IO; it allows users to join with a username into a room and communicate with other group users. The UI has a few features, including a whiteboard and a text view showing all current users.
 
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
@@ -82,11 +80,11 @@ professional_experience:
   - title: "FullStack Developer"
     company: "Brightsquid Secure Communications Corporation"
     duration: "Mar 2021 - Mar 2023,"
-    description: "Worked on and Designed a HIPAA-compliant web-based messaging system to enable communication between a clinic and its patients. A method currently used by 80000 healthcare professionals and 395000 patients in Canada and the US. Worked on an Appointment Reminder application, including integration with various TELUS EMRs, sending patients automated appointment reminders with pre-appointment questionnaires, and reducing No-Show rates."
+    description: "I played a crucial role in designing and developing a HIPAA-compliant web-based messaging system that facilitates seamless communication between clinics and their patients. This system is actively used by a substantial user base, including 80,000 healthcare professionals and 395,000 patients across Canada and the US. Additionally, I contributed to creating an Appointment Reminder application, which involved integrating with various TELUS EMRs. This application streamlines the process of sending automated appointment reminders to patients, complete with pre-appointment questionnaires, significantly reducing No-Show rates."
   - title: "Student Analyst - QA"
     company: "OMERS"
     duration: "May 2019 - Aug 2019,"
-    description: "Developed, modified, and executed test automation scripts utilizing Selenium and Cyprus to ensure the functional integrity of the applications. Worked with QA team members on QA internal process improvement initiatives and conducted the review of test plans and test case documents to ensure appropriate coverage."
+    description: "I actively participated in the development, adaptation, and execution of test automation scripts using Selenium and Cypress to maintain the functional reliability of our applications. I collaborated closely with QA team colleagues and contributed to internal QA process enhancement initiatives. I conducted comprehensive reviews of test plans and case documents to ensure thorough test coverage."
   - title: "Instructor Assistant"
     company: "Wilfrid Laurier University Waterloo Ontario"
     duration: "Sep 2018 - Apr 2018"
@@ -94,7 +92,7 @@ professional_experience:
   - title: "Student Analyst, Full Stack Developer"
     company: "OMERS"
     duration: "May 2018 - Aug 2018"
-    description: "Participated in solution evaluation, developed Proof of Concepts (PoCs), ensuring code quality, optimized application performance, and low maintenance cost, and maintained Application infrastructure. I was predominantly using front-end tools in React framework."
+    description: "Participated in solution evaluation, developed Proof of Concepts (PoCs), ensuring code quality, optimized application performance and low maintenance cost, and maintained Application infrastructure. I was predominantly using front-end tools in the React framework."
 
 #List of edcuation
 education: 
@@ -103,24 +101,18 @@ education:
     degree: "Bachelor of Computer Science"
     department: "Physics and Computer Science"
     awards_achievements:
-      - "Dean's List (2020, 2021)"
-      - "GPA: x/4.0"
+      - "Participated in a software development club for web development."
+      - "Volunteered as campus patrol."
 
 #Optional section
 others:
   #category
-  - title: "Certificates"
+  - title: "Hobbies"
     #list of items
     bullets:
-      - "Udacity Machine Learning (2019)"
-  - title: "Awards"
-    bullets:
-      - "Winner"
-  - title: "Activities/Hobbies"
-    bullets:
-      - "Basketball player"
-      - "Competitive gaming"
-      - "Volunteer, ABC Food bank: Ut enim ad minim veniam"
+      - "I was part of two different coding clubs, one back in High School and one at the University."
+      - "I enjoy learning about various frameworks and implementing them in novel ways."
+      - "I like to play challenging RPGs like divinity original sin 2."
 
 
 
