--- a/core_java/jdbc/pom.xml
+++ b/core_java/jdbc/pom.xml
@@ -54,6 +54,14 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!--Data-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.27</version>
+        </dependency>
     </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>11</source><target>11</target></configuration></plugin></plugins></build>
 
 </project>
